# rpps

./: .env.example  .eslintrc.js  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  quasar.conf.js  tsconfig.json
backend/config/: urls.py
backend/config/settings/: __init__.py
backend/fixtures/: auth.json  auth_api.json  questioning--old.json  reference--old.json
config/: Dockerfile-backend
config/ansible/: docker.yml  kuber.yml  server.yml
config/docker/: Jenkinsfile  default.conf  docker-compose.yml
config/kuber/: Jenkinsfile
config/server/: Jenkinsfile  gunicorn.service  gunicorn.socket  nginx.conf
docs/: api-endpoints.md  approaches_and_methodologies.md  authorization.md  env-variables.md  index.md  installation.md  structure-dir.md
frontend/templates/admin/: base_site.html
frontend/templates/documents/: base.html  questionary.html
public/: db.sqlite3
serve/: .gitignore
src/: App.vue  env.d.ts  index.template.html
src/boot/: axios.ts
src/components/: BannerInformation.vue  BannerUnfilledPosition.vue  CheckAdmin.vue  CheckExpert.vue  CheckManagerDepartment.vue  CheckManagerFaculty.vue  DialogAttachExistingFile.vue  DialogChangeFileCategory.vue  DialogDetailCategory.vue  DialogDetailCategoryExpert.vue  DialogDetailCategoryItem.vue  DialogEffectiveContract.vue  DialogUploadFile.vue  DialogUploadFileToCategory.vue  FileCard.vue  InputAvatar.vue  ListOfFaculties.vue  QuestionnaireStatisticsTable.vue  QuestionnaireUserCategory.vue  QuestionnaireUserHeader.vue  QuestionnaireUserList.vue  QuestionnaireUserMainCategory.vue  QuestionnaireUserTable.vue  UserInfoCard.vue
src/composables/: useApi.ts  useAuth.ts  useFile.ts  useQuestionnaire.ts  useReference.ts
src/css/: app.sass  quasar.variables.sass
src/css/abstracts/: _functions.sass  _variables.sass
src/css/base/: _base.sass  _fonts.sass  _index.sass
src/css/components/: _banner.sass  _dialog-detail-category.sass  _faculties.sass  _file-card.sass  _index.sass  _input-avatar.sass  _input-textfield.sass  _questionnaire-statistic.sass  _questionnaire.sass  _user-card.sass  _user-registration.sass
src/css/layout/: _header.sass  _index.sass
src/css/pages/: _files.sass  _index.sass  _login.sass
src/css/themes/: _index.sass
src/css/vendors/: _index.sass
src/layouts/: EmptyLayout.vue  MainHeader.vue  MainLayout.vue
src/pages/: ApplicationSubmission.vue  CreatingQuestionnaires.vue  Files.vue  Index.vue  ListOfDepartments.vue  Login.vue  Manual.vue  PersonalArea.vue  QuestionnaireStatistics.vue  QuestionnaireUser.vue  UserRegistration.vue
src/router/: index.ts  routes.ts
src/store/: index.ts
src/store/auth/: actions.ts  getters.ts  index.ts  (+2 more)
src/types/: auth.ts  questionnaire.ts  reference.ts
src/utils/: extractAxiosErrors.ts
(+275 files in other folders)
